--- a/style.css
+++ b/style.css
@@ -129,6 +129,16 @@ section{
     line-height: 1.3;
 }
 
+.home-content h1{
+    /* background: linear-gradient(90deg,#0225eb,#ffffff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent; */
+}
+
 span{
-    color: #050eb7;
+    background: linear-gradient(90deg,#0439e6,#ff00c3);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
